kubernetes/infrastructure/traefik/ingress-route-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.home.lab`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: api@internal
          kind: TraefikService
